--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-firebaseui": "~4.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "reactfire": "~2.0.3"
   },
@@ -33,5 +34,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
