--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-firebaseui": "~4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "reactfire": "~2.0.3"
+    "reactfire": "~2.0.3",
+    "styled-components": "~5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
